# CAMIRA

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Pressure.dbg  README.md  U_velocity.dbg  V_velocity.dbg  W_velocity.dbg  advection_coeffs_3  advection_coeffs_4  advection_coeffs_5  advection_coeffs_6  advection_coeffs_7  advection_coeffs_8  advection_coeffs_9  camira-flow  camira-plume  input.inp  main_notile  main_runtimetile  main_templatetile  perf.data.old  soltransform
InputParser/: CMakeLists.txt  InputParser.cpp  InputParser.h
cases/: bfs.inp  block.inp  block_coarse.inp  block_fine.inp  blocks.inp  duct.inp  lid.inp  sphere.inp  sphere_fine.inp  sphere_uniform.inp
include/: ConvergenceLogger.h  ConvergenceLogging.h  FieldProbe.h  FiniteVolume.h  FiniteVolumeFunctions.h  FiniteVolumeStructures.h  IOUtils.h  InputParser.h  InputProcessing.h  Logging.h  MeshStructure.h  SimulationParameters.h  Solver.h  SolverLogging.h  StaggerIndexing.h  SweepTransformations.h  Types.h  Utils.h  VTKWriter.h  utils.h
input/: bfs.inp  bfs_inflow.prof  block.inp  block_coarse.inp  block_coarse2.inp  block_fine.inp  block_uniform.inp  blocks.inp  duct.inp  duct_x.inp  duct_y.inp  duct_z.inp  (+14 more)
src/: CMakeLists.txt  CSVReader.cpp  FVCoefficients.cpp  FaceVelocities.cpp  FiniteVolumeCoefficients.cpp  FiniteVolumeFunctions.cpp  FiniteVolumeStructures.cpp  InputParser.cpp  InputProcessing.cpp  Macros.h  MeshStructure.cpp  Solver.cpp  SweepTransformations.cpp  Types.h  VTKWriter.cpp  VertexValues.cpp  main.cpp  soltransform.cpp  soltransform.h  utils.cpp
src/BoostConv/: BoostConv.cpp  BoostConv.h  CMakeLists.txt
src/CoordinateTransformations/: AxisTransformationFunctions.cpp  AxisTransformationFunctions.h  AxisTransformationMap.cpp  AxisTransformationMap.h  CMakeLists.txt
src/Core/: ArrayIndexConversions.h  CMakeLists.txt  FVLookups.h  FVTools.h  Macros.h  Types.h
src/Core/AxisTransformationMap/: AxisTransformationMap.cpp  AxisTransformationMap.h  CMakeLists.txt
src/Core/Geometry/: CMakeLists.txt  Geometry.cpp  Geometry.h
src/Core/IO/: ArrayIO.h  CMakeLists.txt  CSVReader.cpp  CSVReader.h  IOTools.h  InputParser.h  VTKReader.cpp  VTKReader.h  VTKWriter.h  ptreeTranslators.h
src/Core/Mesh/: CMakeLists.txt  Mesh.cpp  Mesh.h
src/DerivedQuantities/: CMakeLists.txt  DerivedQuantities.h  FieldProbe.cpp  FieldProbe.h  ForceCalculator.cpp  ForceCalculator.h  YPlusCalculator.cpp  YPlusCalculator.h
src/FiniteVolume/: BoundaryConditionData.h  BoundaryConditions.cpp  CMakeLists.txt  FVCoefficients.cpp  FVCoefficients.h  FaceInterpolatedVelocity.h  FaceVelocities.cpp  FiniteVolume.h  FiniteVolumeCoefficients.cpp  FiniteVolumeFunctions.h  FiniteVolumeStructures.cpp  FiniteVolumeStructures.h  GhostCells.cpp  GhostCells.h  InitialConditions.cpp  Mesh.cpp  Mesh.h  VertexValues.cpp
src/Flow/: CMakeLists.txt  ConfigEnums.h  main.cpp
src/Flow/CoordinateTransformations/: AxisTransformationFunctions.cpp  AxisTransformationFunctions.h  CMakeLists.txt
src/Flow/DerivedQuantities/: DerivedQuantities.h  FieldProbe.cpp  ForceCalculator.cpp  YPlusCalculator.cpp
src/Flow/FiniteVolume/: BoundaryConditionData.h  BoundaryConditions.cpp  CMakeLists.txt  FVCoefficients.cpp  FVCoefficients.h  FaceInterpolatedVelocity.h  FaceVelocities.cpp  FiniteVolumeCoefficients.cpp  FiniteVolumeFunctions.h  GhostCells.h  InitialConditions.cpp  VertexValues.cpp
src/Flow/ImmersedBoundary/: CMakeLists.txt  IBData.cpp  IBSolverFunctions.cpp  ImmersedBoundary.h
src/Flow/InputProcessing/: InputProcessing.cpp  InputProcessing.h
src/Flow/Multigrid/: CMakeLists.txt  Multigrid.cpp  Multigrid.h
src/Flow/Parallel/: CMakeLists.txt  Parallel.cpp  Parallel.h
src/Flow/Solver/: CMakeLists.txt  ConvergenceLogging.h  LineSolver.h  LinearSolver.h  PlaneSolver.h  ResidualFunctions.h  Solver.cpp  Solver.h  StaggerIndexing.h  StencilConstants.h  TriadSolver.h
src/Flow/TurbulenceModels/: Laminar.cpp  PrandtlZeroEquation.cpp  TurbulenceModelData.cpp  TurbulenceModelData.h  TurbulenceModelTools.h  TurbulenceModels.h  ZEQ0.cpp  ZEQ1.cpp  ZEQ2.cpp  ZEQ3.cpp  ZEQ4.cpp
src/Geometry/: CMakeLists.txt  Geometry.cpp  Geometry.h  SolidBlock.cpp
src/IO/: ArrayIO.h  CMakeLists.txt  CSVReader.h  IOTools.h  InputParser.cpp  InputProcessing.cpp  InputProcessing.h  VTKReader.cpp  VTKReader.h  VTKWriter.h
src/ImmersedBoundary/: CMakeLists.txt  IBData.cpp  IBGeometry.cpp  IBSolverFunctions.cpp  ImmersedBoundary.h  ImmersedBoundaryData.cpp  ImmersedBoundaryGeometry.cpp
src/Multigrid/: CMakeLists.txt  Multigrid.cpp  Multigrid.h
src/Parallel/: CMakeLists.txt  Parallel.cpp  Parallel.h
src/Plume/: CMakeLists.txt  ConfigEnums.h  main.cpp
src/Plume/Concentration/: CMakeLists.txt  Concentration.cpp  Concentration.h
src/Plume/InputProcessing/: CMakeLists.txt  InputProcessing.cpp  InputProcessing.h
src/Plume/Particle/: CMakeLists.txt  Particle.h
src/Plume/Particles/: CMakeLists.txt  Particles.h
src/Plume/Solver/: CMakeLists.txt  Lagrangian.h  Logging.h  ParticleDynamics.h  Solver.cpp  Solver.h
src/Plume/Sources/: CMakeLists.txt  Sources.cpp  Sources.h
src/Solver/: ArrayIndexConversions.h  CMakeLists.txt  ConvergenceLogging.h  FieldProbe.h  LineSolver.h  LinearSolver.h  PlaneSolver.h  ResidualFunctions.h  Solver.cpp  Solver.h  StaggerIndexing.h  StaggerIndexing2.h  StencilConstants.h  TriadSolver.h  TriadSolver2.h
src/Tools/: AxisTransformationMap.cpp  AxisTransformationMap.h  CMakeLists.txt  FVLookups.h  FVTools.h  FieldProbe.h  FiniteVolumeUtils.h  SweepTransformations.cpp  SweepTransformations.h
src/TurbulenceModels/: CMakeLists.txt  ChenAndXuZeroEquation.cpp  Laminar.cpp  PrandtlZeroEquation.cpp  TurbulenceModelData.cpp  TurbulenceModelData.h  TurbulenceModelTools.h  TurbulenceModels.cpp  TurbulenceModels.h  ZEQ0.cpp  ZEQ1.cpp  ZEQ2.cpp  ZEQ3.cpp  ZEQ4.cpp
tests/: CMakeLists.txt  TestFunctions.cpp  TestFunctions.h  test.cpp  testing.conf
tests/input/: facevel_extrapolated_test.inp  facevel_test_mesh.inp  facevel_uniform_test.inp  facevel_zerogradient_test.inp  mesh_test.inp  test.inp  test_mesh.inp  testing.conf
(+2709 files in other folders)
